--- a/sass/ds-custom/_header.scss
+++ b/sass/ds-custom/_header.scss
@@ -31,7 +31,7 @@ header	{
 	background: $blue-medium url(../images/ds/DS-header-bkgrd.jpg) 50% center no-repeat;
 	//z-index: 100;
 	width: 100%;
-	position: absolute;
+	position: relative;
 	top: 0; left: 0;
 
 }
