--- a/sass/ds-custom/_homepage.scss
+++ b/sass/ds-custom/_homepage.scss
@@ -1,5 +1,8 @@
 /*! homepage specific styling for Design Science 2014 redesign */
 
+body.homepage	{
+	background: $blue-dark;
+}
 body.homepage header	{
 	height: 145px;
 	background: none;
