--- a/sass/ds-custom/_menus.scss
+++ b/sass/ds-custom/_menus.scss
@@ -264,7 +264,7 @@
 	@extend .utility;
 	float: left;
 	position: absolute;
-	top: 4.2rem; left:10px;
+	top:4.5rem; left:10px;
 	text-transform: uppercase;
 	li	{
 		&:after	{
